z-index correction

--- a/Slider.css
+++ b/Slider.css
@@ -9,6 +9,7 @@
     right: 32px;
     height: 150px;
     width:  360px;  
+    z-index: 25;
 }
 
 /* SVG positionings  */
